refactor(#00) - refatorado de classes para reração de relatorios
foi elaborado a refatoração de algumas classes de controller , entities , services e repositorys para a criação dos relatorios de abastecimento, troca de oleo , tecnicos e viaturas.