@@ -3,6 +3,8 @@ package br.com.edu.fatec.IPEMControl.Service;
 import br.com.edu.fatec.IPEMControl.DTO.VeiculoResumoDTO;
 import br.com.edu.fatec.IPEMControl.Entities.Abastecimento;
 import br.com.edu.fatec.IPEMControl.Entities.RegistroSaida;
+import br.com.edu.fatec.IPEMControl.Entities.Veiculo;
+import br.com.edu.fatec.IPEMControl.Exception.RecursoNaoEncontradoException;
 import br.com.edu.fatec.IPEMControl.Repository.AbastecimentoRepository;
 import br.com.edu.fatec.IPEMControl.Repository.RegistroSaidaRepository;
 import br.com.edu.fatec.IPEMControl.Repository.VeiculoRepository;
@@ -16,6 +18,7 @@ import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class VeiculoService {
@@ -38,9 +41,19 @@ public class VeiculoService {
     @Autowired
     private AbastecimentoRepository abastecimentoRepository;
 
-    public List<VeiculoResumoDTO> listarVeiculosResumo() {
+    /**
+     * Lista veículos com resumo.
+     * CORRIGIDO: parâmetro "todos" — quando false filtra apenas veículos ativos (ativo=true).
+     * ADM usa ?todos=true para ver todos incluindo inativos.
+     */
+    public List<VeiculoResumoDTO> listarVeiculosResumo(boolean todos) {
 
-        return veiculoRepository.findAll().stream().map(veiculo -> {
+        List<Veiculo> veiculos = veiculoRepository.findAll().stream()
+                // CORRIGIDO: técnico não vê veículos inativos
+                .filter(v -> todos || Boolean.TRUE.equals(v.getAtivo()))
+                .collect(Collectors.toList());
+
+        return veiculos.stream().map(veiculo -> {
 
             Optional<RegistroSaida> ultimoRegistro =
                     registroSaidaRepository
@@ -55,7 +68,7 @@ public class VeiculoService {
                     .orElse("—");
 
             String ultimoMotorista = ultimoRegistro
-                    .map(r -> r.getUsuario().getNome())
+                    .map(r -> r.getUsuario() != null ? r.getUsuario().getNome() : "—")
                     .orElse("—");
 
             Optional<Abastecimento> ultimoAbastecimento =
@@ -70,7 +83,10 @@ public class VeiculoService {
                     ? FMT_KM.format(veiculo.getKmAtual().longValue())
                     : "—";
 
-            return new VeiculoResumoDTO(
+            String status = emUso ? "em_uso" : "disponivel";
+
+            // CORRIGIDO: VeiculoResumoDTO agora inclui habilitacaoCategoria e ativo
+            VeiculoResumoDTO dto = new VeiculoResumoDTO(
                     veiculo.getIdVeiculo(),
                     veiculo.getModelo(),
                     veiculo.getPrefixo(),
@@ -78,10 +94,52 @@ public class VeiculoService {
                     ultimoMotorista,
                     ultimoAbastecimentoStr,
                     km,
-                    emUso ? "em_uso" : "disponivel"
+                    status
             );
+            dto.setHabilitacaoCategoria(veiculo.getHabilitacaoCategoria());
+            dto.setAtivo(veiculo.getAtivo());
+            return dto;
 
-        }).toList();
+        }).collect(Collectors.toList());
+    }
+
+    /**
+     * Ativa ou desativa um veículo.
+     * NOVO: endpoint /veiculos/{id}/ativar e /veiculos/{id}/desativar
+     */
+    public Veiculo toggleAtivo(Integer id, boolean ativo) {
+        Veiculo veiculo = veiculoRepository.findById(id)
+                .orElseThrow(() -> new RecursoNaoEncontradoException("Veículo não encontrado."));
+        veiculo.setAtivo(ativo);
+        return veiculoRepository.save(veiculo);
+    }
+
+    /**
+     * Atualiza dados de um veículo (PUT completo).
+     * NOVO: endpoint /veiculos/{id} PUT
+     */
+    public Veiculo atualizar(Integer id, Veiculo atualizado) {
+        Veiculo veiculo = veiculoRepository.findById(id)
+                .orElseThrow(() -> new RecursoNaoEncontradoException("Veículo não encontrado."));
+
+        veiculo.setPrefixo(atualizado.getPrefixo());
+        veiculo.setPlaca(atualizado.getPlaca());
+        veiculo.setMarca(atualizado.getMarca());
+        veiculo.setModelo(atualizado.getModelo());
+        veiculo.setAno(atualizado.getAno());
+        veiculo.setKmAtual(atualizado.getKmAtual());
+        veiculo.setTipoCombustivel(atualizado.getTipoCombustivel());
+        veiculo.setHabilitacaoCategoria(atualizado.getHabilitacaoCategoria());
+        veiculo.setNucleoDar(atualizado.getNucleoDar());
+
+        if (atualizado.getIntervaloTrocaOleoKm() != null)
+            veiculo.setIntervaloTrocaOleoKm(atualizado.getIntervaloTrocaOleoKm());
+        if (atualizado.getNumeroFl() != null)
+            veiculo.setNumeroFl(atualizado.getNumeroFl());
+        if (atualizado.getAtivo() != null)
+            veiculo.setAtivo(atualizado.getAtivo());
+
+        return veiculoRepository.save(veiculo);
     }
 
     private String formatarData(LocalDateTime dateTime) {
